<resources>
    <string name="app_name">Step Counter</string>
    <string name="zero">0</string>
    <string name="setYourGoal">2600</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="goal">Enter your goal</string>
    <string name="save">Save</string>
    <string name="steps">STEPS</string>
    <string name="km">0 </string>
    <string name="cal">0</string>
    <string name="time">0</string>
    <string name="next">Next</string>
    <string name="kcal">kcal</string>
    <string name="calo">cal</string>
</resources>