<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/constraintLayout">


            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="@dimen/dim_250"
                android:layout_height="@dimen/dim_250"
                android:layout_margin="@dimen/dim_38"
                app:cpb_background_progressbar_color="#F2F2F2"
                app:cpb_background_progressbar_width="@dimen/dim_15"
                app:cpb_progress="0"
                app:cpb_progress_max="2600"
                app:cpb_progressbar_color="#F44336"
                app:cpb_progressbar_color_end="#F44336"
                app:cpb_progressbar_color_start="#fd0"
                app:cpb_progressbar_width="@dimen/dim_11"
                app:cpb_round_border="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stepsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_45"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar"
                app:layout_constraintVertical_bias="0.41" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="?selectableItemBackground"
                android:clickable="true"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/steps"
                android:textColor="#F1EFEC"
                android:textSize="@dimen/font_size_22"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                app:layout_constraintTop_toBottomOf="@+id/stepsTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            android:padding="@dimen/dim_25"
            android:layout_marginBottom="@dimen/dim_38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularProgressBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dim_56"
                    android:text="@string/km"
                    android:textColor="#F2F2F2"
                    android:textSize="@dimen/font_size_30"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/dim_15"
                    android:gravity="center_vertical"
                    android:background="@drawable/text_view_border_background"
                    android:drawablePadding="@dimen/dim_25"
                    tools:ignore="RtlSymmetry"
                    android:autoSizeTextType="uniform"
                    app:drawableLeftCompat="@drawable/distance" />

                <TextView
                    android:id="@+id/calBurn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dim_56"
                    android:text="@string/cal"
                    android:clickable="true"

                    android:layout_weight="1"
                    android:textColor="#f2f2f2"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/font_size_30"
                    android:paddingStart="@dimen/dim_15"
                    android:drawablePadding="@dimen/dim_25"
                    android:background="@drawable/text_view_border_background"
                    app:drawableStartCompat="@drawable/calorie"
                    tools:ignore="RtlSymmetry"
                    android:autoSizeTextType="uniform"
                    app:drawableEndCompat="@drawable/drop_down" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Chronometer
                    android:id="@+id/timeInMinChrono"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dim_56"
                    android:text="@string/time"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_size_30"
                    android:textColor="#f2f2f2"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dim_15"
                    android:drawablePadding="@dimen/dim_5"
                    android:background="@drawable/text_view_border_background"
                    android:drawableStart="@drawable/minutes"
                    tools:ignore="RtlSymmetry"
                    android:autoSizeTextType="uniform"
                    />

                <TextView
                    android:id="@+id/setGoalTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dim_56"
                    android:layout_weight="1"

                    android:gravity="center_vertical"
                    android:text="@string/setYourGoal"
                    android:clickable="true"
                    android:textColor="#F2F2F2"
                    android:textSize="@dimen/font_size_30"

                    android:background="@drawable/text_view_border_background"
                    tools:ignore="RtlSymmetry"
                    android:paddingStart="@dimen/dim_15"
                    android:drawablePadding="@dimen/dim_20"
                    app:drawableLeftCompat="@drawable/goal_icon"
                    android:autoSizeTextType="uniform"/>


            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/startStop"
            style="@style/btn_style"
            android:layout_width="@dimen/dim_180"
            android:layout_height="@dimen/dim_60"
            android:background="@drawable/button_selected"
            android:text="@string/start"
            android:textSize="@dimen/font_size_30"
            android:layout_marginTop="@dimen/dim_100"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.861"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="@dimen/dim_274" />



    </LinearLayout>

</ScrollView>